--- a/firstReactApp/app.json
+++ b/firstReactApp/app.json
@@ -22,7 +22,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package":"com.somecompany.V_made_RNA"
     },
     "web": {
       "favicon": "./assets/favicon.png"
