--- a/firstReactApp/package.json
+++ b/firstReactApp/package.json
@@ -18,8 +18,10 @@
     "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-appwrite": "^0.3.1",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
