--- a/firstReactApp/package.json
+++ b/firstReactApp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "~50.0.14",
+    "expo-av": "^14.0.5",
     "expo-constants": "~15.4.6",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
@@ -18,6 +19,7 @@
     "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.3.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
