--- a/firstReactApp/package.json
+++ b/firstReactApp/package.json
@@ -12,6 +12,7 @@
     "expo": "~50.0.14",
     "expo-av": "^14.0.5",
     "expo-constants": "~15.4.6",
+    "expo-document-picker": "^12.0.1",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
